Created main construction for 1 version of program. Need for explicit data output